--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch  public/db.json --port=3001"
+    "server": "json-server ./public/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": [
